classDiagram

class Game {
    -Board board
    -array~Player~ players
    -int currentPlayer
    +resetGame()
    +startGame()
    +takeTurn()
    +performAction()
    +performOptionalAction()
    +checkWinCondition() bool
}

class Board {
    -ColorEnum tokens[5][5]
    -Deck tier1
    -Deck tier2
    -Deck tier3
    -array~Card~ visibleTier1
    -array~Card~ visibleTier2
    -array~Card~ visibleTier3
    ~array~Card~ royals
    -vector~ColorEnum~ bagOfTokens
    -int boardPrivileges
    +refillGrid()
    +takeTokens(vector<Position> gridPositions) vector~ColorEnum~
    +resetBoard()
}

class Player {
    -array~int~ tokens
    -array~int~ bonuses
    -vector~Card~ purchasedCards
    -array~Card~ reservedCards
    -int privileges
    -int totalPoints
    -int crowns
    +canAfford(Card) bool
    +reserveCard(Card)
    +reset()
}

class Deck {
    -vector~Card~ cards
    +draw() Card
    +shuffle()
    +reset()
}

class Card {
    -int id
    -GemEnum bonusColor
    -array~int~ cost
    -int bonusGems
    -int points
    -int crowns
    -AbilityEnum ability
}

class Position {
    +int x
    +int y
}

Game --> Board
Game --> Player
Board --> Deck
Board --> Card
Player --> Card